--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "todo app",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ashok Joshi",
@@ -11,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mongoose": "^4.9.6"
   }
 }
